; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_alloc.c_zend_mm_mmap.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_alloc.c_zend_mm_mmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROT_READ = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@MAP_PRIVATE = common dso_local global i32 0, align 4
@MAP_ANON = common dso_local global i32 0, align 4
@ZEND_MM_FD = common dso_local global i32 0, align 4
@MAP_FAILED = common dso_local global i8* null, align 8
@MAP_HUGETLB = common dso_local global i32 0, align 4
@MEM_COMMIT = common dso_local global i32 0, align 4
@MEM_RESERVE = common dso_local global i32 0, align 4
@PAGE_READWRITE = common dso_local global i32 0, align 4
@ZEND_MM_CHUNK_SIZE = common dso_local global i64 0, align 8
@errno = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@zend_mm_use_huge_pages = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64)* @zend_mm_mmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @zend_mm_mmap(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i32, i32* @PROT_READ, align 4
  %7 = load i32, i32* @PROT_WRITE, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @MAP_PRIVATE, align 4
  %10 = load i32, i32* @MAP_ANON, align 4
  %11 = or i32 %9, %10
  %12 = load i32, i32* @ZEND_MM_FD, align 4
  %13 = call i8* @mmap(i32* null, i64 %5, i32 %8, i32 %11, i32 %12, i32 0)
  store i8* %13, i8** %4, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i8*, i8** @MAP_FAILED, align 8
  %16 = icmp eq i8* %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %20

18:                                               ; preds = %1
  %19 = load i8*, i8** %4, align 8
  store i8* %19, i8** %2, align 8
  br label %20

20:                                               ; preds = %18, %17
  %21 = load i8*, i8** %2, align 8
  ret i8* %21
}

declare dso_local i8* @mmap(i32*, i64, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
